--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body {
 header {
   background-color: #c9c4c9;
   text-align: center;
-  background-image: url(img/fondo-header.jpg);
+  background-image: url(../img/fondo-header.jpg);
   background-size: cover;
   min-height: 122px;
   background-position: 0 -120px;
